updated about page

--- a/about/index.html
+++ b/about/index.html
@@ -73,8 +73,11 @@
             </ul>
         </div>
     </div>
-    <div class="background">
-        <img src="../img/gai-video.jpg" class="stretch" alt="About GAI Video">
+    <div class="video-background">
+        <h3>See more of who we are</h3>
+        <h4>
+            <i class="fa fa-play-circle fa-2x"></i>Play Video
+        </h4>
     </div>
     <div class="container-fluid about_body">
         <h2>Our E-Board</h2>
