--- a/contact/students/index.html
+++ b/contact/students/index.html
@@ -62,12 +62,12 @@
                 <form>
                     <div class="col-sm-6 col-sm-offset-3 form-group contact-form-group">
                         <label class="contact-label">Name</label>
-                        <input type="text" class="form-control contact-input">
+                        <input type="text" name="name" class="form-control contact-input">
                         <label class="contact-label">Email</label>
-                        <input type="text" class="form-control contact-input">
+                        <input type="text" name="email" class="form-control contact-input">
                         <label class="contact-label">Message</label>
-                        <textarea class="form-control contact-input" rows="5"></textarea>
-                        <button type="submit" class="btn btn-default form-btn">Submit</button>
+                        <textarea class="form-control contact-input" name="message" rows="5"></textarea>
+                        <button type="submit" value="Send" class="btn btn-default form-btn">Submit</button>
                     </div>
                 </form>
             </div>
