--- a/contact/index.html
+++ b/contact/index.html
@@ -1,22 +1,15 @@
-<!doctype HTML>
-<link rel="icon" href="/img/favicon.png" type="image/x-icon"/>
-<html class="no-js" lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
     <title>Contact Us</title>
-    <meta name="description" content="Global App Initiative - Be sure to change this tag."/>
-    <link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../../css/global.css"/>
-    <link rel="stylesheet" href="../../css/contact.css"/>
+    <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../css/global.css"/>
+    <link rel="stylesheet" href="../css/contact.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-
-<!-- ############################################################ -->
 <!-- Header -->
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
@@ -28,63 +21,35 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="../../index.html"><img height="48px" src="../../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
+            <a href="../../index.html"><img height="48px" src="../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="../../about/index.html">About</a></li>
-                <li><a href="../../projects/index.html">Projects</a></li>
-                <li><a href="../../education/index.html">Education</a></li>
-                <li><a href="../../events/index.html">Events</a></li>
-                <li><a href="../../contact/index.html">Contact</a></li>
+                <li><a href="../about/index.html">About</a></li>
+                <li><a href="../projects/index.html">Projects</a></li>
+                <li><a href="../education/index.html">Education</a></li>
+                <li><a href="../events/index.html">Events</a></li>
+                <li><a href="../contact/index.html">Contact</a></li>
             </ul>
         </div>
     </div>
 </nav>
 
-<!-- main body-->
-<div class="container-fluid contact-container">
-    <!--contact nav bar-->
-    <div class="tab-filter-container">
-        <ul class="tab-filters">
-            <li class="filter active">
-                <a class="filter-link active" href="../students/index.html">Student</a>
-            </li>
-            <li class="filter">
-                <a class="filter-link" href="../non-profits/index.html">Nonprofit</a>
-            </li>
-        </ul>
-    </div>
-    <div class="container-fluid contact-background">
-        <div class="container contact-body">
-            <h1>Join Global App Initiative!</h1>
-            <div class="row form-row">
-                <form>
-                    <div class="col-sm-6 col-sm-offset-3 form-group contact-form-group">
-                        <label class="contact-label">Name</label>
-                        <input type="text" name="name" class="form-control contact-input">
-                        <label class="contact-label">Email</label>
-                        <input type="text" name="email" class="form-control contact-input">
-                        <label class="contact-label">Message</label>
-                        <textarea class="form-control contact-input" name="message" rows="5"></textarea>
-                        <button type="submit" value="Send" class="btn btn-default form-btn">Submit</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div class="container general-contact">
-        <h3>General Inquiry</h3>
-        <div class="col-sm-5">
-            <label>Name</label>
-            <input type="text" class="form-control">
-            <label>Email</label>
-            <input type="text" class="form-control">
-            <button type="submit" class="btn btn-default form-btn">Submit</button>
-        </div>
-        <div class="col-sm-offset-1 col-sm-5">
-            <label>Message</label>
-            <textarea class="form-control" rows="5"></textarea>
+<div class="container-fluid contact-background">
+    <div class="container contact-body">
+        <h1>Contact Us</h1>
+        <div class="row form-row">
+            <form>
+                <div class="col-sm-6 col-sm-offset-3 form-group contact-form-group">
+                    <label class="contact-label">Name</label>
+                    <input type="text" name="name" class="form-control contact-input">
+                    <label class="contact-label">Email</label>
+                    <input type="text" name="email" class="form-control contact-input">
+                    <label class="contact-label">Message</label>
+                    <textarea class="form-control contact-input" name="message" rows="5"></textarea>
+                    <button type="submit" value="Send" class="btn btn-default form-btn">Submit</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
