--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="/projects/index.html">Projects</a></li>
                 <li><a href="/education/index.html">Education</a></li>
                 <li><a href="/events/index.html">Events</a></li>
-                <li><a href="/contact/students/index.html">Contact</a></li>
+                <li><a href="/contact/index.html">Contact</a></li>
             </ul>
         </div>
     </div>
