--- a/about/index.html
+++ b/about/index.html
@@ -246,45 +246,43 @@
     <div class="container-fluid">
       <ul class="footer-lists">
         <li>About</li>
-        <li><a href="/team/">Team</a></li>
         <li><a href="https://medium.com/@GlobalAppsBU" target="_blank">Blog</a></li>
-        <li><a href="/press/">Press</a></li>
+        <li><a href="/press/">Sponsors</a></li>
       </ul>
       <ul class="footer-lists">
         <li>Projects</li>
-        <li><a href="/projects/current/">Current</a></li>
-        <li><a href="/projects/past/">Past</a></li>
-        <li><a href="/projects/clients/">Clients</a></li>
+        <li><a href="/projects/current/">2013</a></li>
+        <li><a href="/projects/past/">2014</a></li>
+        <li><a href="/projects/clients/">2015</a></li>
       </ul>
+        <ul class="footer-lists">
+            <li>Education</li>
+            <li><a href="/education/index.html">Android</a></li>
+            <li><a href="#">Design</a></li>
+            <li><a href="#">iOS</a></li>
+            <li><a href="#">Windows</a></li>
+        </ul>
       <ul class="footer-lists">
         <li>Resources</li>
-        <li><a href="/job-board/">Job Board</a></li>
-        <li><a href="/education/tutorials/">Tutorials</a></li>
         <li><a href="/newsletter/">Newsletter</a></li>
       </ul>
-      <ul class="footer-lists">
-        <li>Contact</li>
-        <li><a href="/contact/students/">Students</a></li>
-        <li><a href="/contact/non-profits/">Non-Profits</a></li>
-        <li><a href="/partners/">Partners</a></li>
-      </ul>
       <ul class="footer-lists gray-social-ul">
-        <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="/img/social/facebook-32.png"></img></a>
-        <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="/img/social/twitter-32.png"></img></a>
-        <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="/img/social/instagram-32.jpg"></img></a>
+        <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="../img/social/facebook-32.png"></a>
+        <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="../img/social/twitter-32.png"></a>
+        <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="../img/social/instagram-32.jpg"></a>
         <br>
-        <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="/img/social/linkedin-32.png"></img></a>
-        <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="/img/social/youtube-32.png"></img></a>
-        <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="/img/social/github-32.png"></img></a>
+        <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="../img/social/linkedin-32.png"></a>
+        <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="../img/social/youtube-32.png"></a>
+        <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="../img/social/github-32.png"></a>
       </ul>
     </div>
     <ul class="mobile-social">
-      <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="/img/social/facebook-32.png"></img></a>
-      <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="/img/social/twitter-32.png"></img></a>
-      <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="/img/social/instagram-32.jpg"></img></a>
-      <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="/img/social/linkedin-32.png"></img></a>
-      <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="/img/social/youtube-32.png"></img></a>
-      <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="/img/social/github-32.png"></img></a>
+      <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="../img/social/facebook-32.png"></a>
+      <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="../img/social/twitter-32.png"></a>
+      <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="../img/social/instagram-32.jpg"></a>
+      <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="../img/social/linkedin-32.png"></a>
+      <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="../img/social/youtube-32.png"></a>
+      <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="../img/social/github-32.png"></a>
     </ul>
     <hr>
     <div class="container-fluid" style="padding-bottom:20px">
