--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
         </ul>
         <ul class="footer-lists">
             <li>Projects</li>
-            <li><a href="/projects/current/">2013</a></li>
-            <li><a href="/projects/past/">2014</a></li>
-            <li><a href="/projects/clients/">2015</a></li>
+            <li><a href="/projects/2013/index.html">2013</a></li>
+            <li><a href="/projects/2014/index.html">2014</a></li>
+            <li><a href="/projects/2015/index.html">2015</a></li>
         </ul>
         <ul class="footer-lists">
             <li>Education</li>
