home page and footer changes

--- a/about/index.html
+++ b/about/index.html
@@ -229,21 +229,7 @@
 
   <!-- Site footer -->
   <div class="footer">
-    <div class="presub">
-      <div class="subscribe-bar">
-        <div>
-          <form role="form">
-            <label for="email">Keep up to date</label>
-            <div class="form-group">
-              <input type="email" class="form-control" id="email" placeholder="Enter your email">
-            </div>
-            <button type="submit" class="btn btn-default">Subscribe</button>
-          </form>
-        </div>
-      </div>
-    </div>
-    <div style="clear:both"></div>
-    <div class="container-fluid">
+    <div class="container-fluid footer-container">
       <ul class="footer-lists">
         <li>About</li>
         <li><a href="https://medium.com/@GlobalAppsBU" target="_blank">Blog</a></li>
@@ -285,7 +271,7 @@
       <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="../img/social/github-32.png"></a>
     </ul>
     <hr>
-    <div class="container-fluid" style="padding-bottom:20px">
+    <div class="container-fluid footer-container" style="padding-bottom:20px">
        <div class="footer-corner">
         <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
       </div>
