--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <div class="col-sm-4 home-subscribe">
             <p>Keep up with the latest news and events</p>
-            <div class="col-sm-8 col-sm-offset-2">
+            <div class="col-sm-10 col-sm-offset-1">
                 <form class="subscribe-form">
                     <div class="form-group">
                         <div class="input-group">
@@ -206,7 +206,7 @@
     <!--</div>-->
     <!--</div>-->
     <!--<div style="clear:both"></div>-->
-    <div class="container-fluid">
+    <div class="container-fluid footer-container">
         <ul class="footer-lists">
             <li>About</li>
             <li><a href="https://medium.com/@GlobalAppsBU" target="_blank">Blog</a></li>
@@ -248,7 +248,7 @@
         <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="/img/social/github-32.png"></img></a>
     </ul>
     <hr>
-    <div class="container-fluid" style="padding-bottom:20px">
+    <div class="container-fluid footer-container" style="padding-bottom:20px">
         <div class="footer-corner">
             <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
         </div>
