home page changes. education changes

--- a/education/design.html
+++ b/education/design.html
@@ -48,7 +48,7 @@
         <nav>
             <ul class="videoNav">
                 <li id="android"><a href="index.html">Android</a></li>
-                <li id="design"><a href="designVids.html">Design</a></li>
+                <li id="design"><a href="design.html">Design</a></li>
                 <li id="ios"><a href="#iOSVids.html">iOS</a></li>
                 <li id="windows"><a href="#windowsVids.html">Windows</a></li>
             </ul>
