--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="/about/index.html">About</a></li>
-                <li><a href="/projects/index.html">Projects</a></li>
-                <li><a href="/education/index.html">Education</a></li>
-                <li><a href="/contact/index.html">Contact</a></li>
+                <li><a href="about/index.html">About</a></li>
+                <li><a href="projects/index.html">Projects</a></li>
+                <li><a href="education/index.html">Education</a></li>
+                <li><a href="contact/index.html">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -50,7 +50,7 @@
             <div class="intro-heading">Global App Initiative</div>
             <div class="intro-lead-in">Making the world a better
                 <br>place, one app at a time</div>
-            <a href="#services" class="page-scroll btn btn-xl">Join Our Club</a>
+            <a href="about/index.html" class="page-scroll btn btn-xl">Learn More</a>
         </div>
     </div>
 </header>
@@ -162,13 +162,13 @@
     <div class="row home-footer">
         <div class="col-sm-4 home-contact">
             <p>Student or nonprofit?</p>
-            <div class="col-sm-4 col-sm-offset-4">
+            <div class="col-sm-4 col-sm-offset-4 col-xs-offset-4">
                 <a href="contact/students/index.html" class="btn home-btn">Contact Us</a>
             </div>
         </div>
         <div class="col-sm-4 home-subscribe">
             <p>Keep up with the latest news and events</p>
-            <div class="col-sm-10 col-sm-offset-1">
+            <div class="col-sm-10 col-sm-offset-1 col-xs-offset-2">
                 <form class="subscribe-form">
                     <div class="form-group">
                         <div class="input-group">
@@ -183,7 +183,7 @@
         </div>
         <div class="col-sm-4 home-projects">
             <p>Want to see our work?</p>
-            <div class="col-sm-4 col-sm-offset-4">
+            <div class="col-sm-4 col-sm-offset-4 col-xs-offset-4">
                 <a href="#" class="btn home-btn">Projects</a>
             </div>
         </div>
