--- a/education/index.html
+++ b/education/index.html
@@ -46,11 +46,11 @@
   <div class="container">
     <h2>Video Tutorials</h2><br>
     <nav>
-      <ul class="videoNav">
-        <li id="android"><a href="index.html">Android</a></li>
-        <li id="design"><a href="designVids.html">Design</a></li>
-        <li id="ios"><a href="#iOSVids.html">iOS</a></li>
-        <li id="windows"><a href="#windowsVids.html">Windows</a></li>
+      <ul class="video-nav">
+        <li class="active" id="android"><a href="index.html">Android</a></li>
+        <li id="design"><a href="design.html">Design</a></li>
+        <li id="ios"><a href="ios.html">iOS</a></li>
+        <li id="windows"><a href="windows.html">Windows</a></li>
       </ul>
     </nav>
   </div>
