updated education nav

--- a/education/android.html
+++ b/education/android.html
@@ -33,7 +33,7 @@
       <ul class="nav navbar-nav">
         <li><a href="../about/index.html">About</a></li>
         <li><a href="../projects/index.html">Projects</a></li>
-        <li><a href="../education/index.html">Education</a></li>
+        <li><a href="../education/android.html">Education</a></li>
         <li><a href="../events/index.html">Events</a></li>
         <li><a href="../contact/students/index.html">Contact</a></li>
       </ul>
@@ -47,10 +47,10 @@
     <h2>Video Tutorials</h2><br>
     <nav>
       <ul class="video-nav">
-        <li class="active" id="android"><a href="index.html">Android</a></li>
-        <li id="design"><a href="design.html">Design</a></li>
-        <li id="ios"><a href="ios.html">iOS</a></li>
-        <li id="windows"><a href="windows.html">Windows</a></li>
+        <li class="active" id="android"><a class="btn education-btn active-btn" href="android.html">Android</a></li>
+        <li id="design"><a class="btn education-btn" href="design.html">Design</a></li>
+        <li id="ios"><a class="btn education-btn" href="ios.html">iOS</a></li>
+        <li id="windows"><a class="btn education-btn" href="windows.html">Windows</a></li>
       </ul>
     </nav>
   </div>
