--- a/education/design.html
+++ b/education/design.html
@@ -33,7 +33,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="../about/index.html">About</a></li>
                 <li><a href="../projects/index.html">Projects</a></li>
-                <li><a href="../education/index.html">Education</a></li>
+                <li><a href="../education/android.html">Education</a></li>
                 <li><a href="../events/index.html">Events</a></li>
                 <li><a href="../contact/students/index.html">Contact</a></li>
             </ul>
@@ -46,18 +46,15 @@
     <div class="container">
         <h2>Video Tutorials</h2><br>
         <nav>
-            <ul class="videoNav">
-                <li id="android"><a href="index.html">Android</a></li>
-                <li id="design"><a href="design.html">Design</a></li>
-                <li id="ios"><a href="#iOSVids.html">iOS</a></li>
-                <li id="windows"><a href="#windowsVids.html">Windows</a></li>
+            <ul class="video-nav">
+                <li class="active" id="android"><a class="btn education-btn" href="android.html">Android</a></li>
+                <li id="design"><a class="btn education-btn active-btn" href="design.html">Design</a></li>
+                <li id="ios"><a class="btn education-btn" href="ios.html">iOS</a></li>
+                <li id="windows"><a class="btn education-btn" href="windows.html">Windows</a></li>
             </ul>
         </nav>
     </div>
     <div style="margin:0 auto">
-    </div>
-    <div class="box-wrap">
-        <p>This is a p!</p>
     </div>
 </div>
 
