--- a/contact/index.html
+++ b/contact/index.html
@@ -27,7 +27,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="../about/index.html">About</a></li>
                 <li><a href="../projects/index.html">Projects</a></li>
-                <li><a href="../education/index.html">Education</a></li>
+                <li><a href="../education/android.html">Education</a></li>
                 <li><a href="../contact/index.html">Contact</a></li>
             </ul>
         </div>
