added android education videos

--- a/education/android.html
+++ b/education/android.html
@@ -43,37 +43,92 @@
 
 <!-- main body-->
 <div class="body-container">
-  <div class="container">
-    <h2>Video Tutorials</h2><br>
-    <nav>
-      <ul class="video-nav">
-        <li class="active" id="android"><a class="btn education-btn active-btn" href="android.html">Android</a></li>
-        <li id="design"><a class="btn education-btn" href="design.html">Design</a></li>
-        <li id="ios"><a class="btn education-btn" href="ios.html">iOS</a></li>
-        <li id="windows"><a class="btn education-btn" href="windows.html">Windows</a></li>
-      </ul>
-    </nav>
-  </div>
-  <div style="margin:0 auto">
-  </div>
+    <div class="container video-nav-container">
+        <h2>Video Tutorials</h2><br>
+        <nav>
+            <ul class="video-nav">
+                <li class="active" id="android"><a class="btn education-btn active-btn" href="android.html">Android</a></li>
+                <li id="design"><a class="btn education-btn" href="design.html">Design</a></li>
+                <li id="ios"><a class="btn education-btn" href="ios.html">iOS</a></li>
+                <li id="windows"><a class="btn education-btn" href="windows.html">Windows</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="container video-container">
+        <div class="container-fluid video-container-inner">
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item youtube-video" src="https://www.youtube.com/embed/pvLjbuLXcSg?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">Android Development Session 1</p>
+                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-description">
+                    This is the first lecture on Android app development, covering the basics
+                    of Android development workflow with Eclipse and simulating Android devices.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZnfUNuUqclw?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">Android Development Session 2</p>
+                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-description">
+                    This is the first lecture on Android app development, covering the basics
+                    of Android development workflow with Eclipse and simulating Android devices.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jOTO0TfHnu8?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">Android Development Session 3</p>
+                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-description">
+                    This is the third Android development session, where students learn more
+                    about developing with Java and working with the simulated Android devices.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/dKe6i-W9TPo?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">Android Development Session 4</p>
+                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-description">
+                    This fourth training session for Android covers more uses and implementations
+                    of lists, and how to build applications with list structure.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CFvVxBAySjk?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">Android Development Session 5</p>
+                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-description">
+                    This is the first lecture on Android app development, covering the basics
+                    of Android development workflow with Eclipse and simulating Android devices.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nXgZMqe7QWs?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">Android Development Session 6</p>
+                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-description">
+                    This session covers alert dialogues and toasts. Specifically, the lecture goes over
+                    basic usage and then layout customizations of alerts that users respond to with given actions.
+                </p>
+            </div>
+        </div>
+        <div class="video-bottom"></div>
+    </div>
 </div>
 
 <!-- Site footer -->
 <div class="footer">
-  <div class="presub">
-    <div class="subscribe-bar">
-      <div>
-        <form role="form">
-          <label for="email">Keep up to date</label>
-          <div class="form-group">
-            <input type="email" class="form-control" id="email" placeholder="Enter your email">
-          </div>
-          <button type="submit" class="btn btn-default">Subscribe</button>
-        </form>
-      </div>
-    </div>
-  </div>
-  <div style="clear:both"></div>
   <div class="container-fluid">
     <ul class="footer-lists">
       <li>About</li>
