--- a/education/windows.html
+++ b/education/windows.html
@@ -43,7 +43,7 @@
 
 <!-- main body-->
 <div class="body-container">
-    <div class="container">
+    <div class="container video-nav-container">
         <h2>Video Tutorials</h2><br>
         <nav>
             <ul class="video-nav">
