added ios and windows education videos

--- a/education/android.html
+++ b/education/android.html
@@ -60,8 +60,7 @@
                 <div class="video embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item youtube-video" src="https://www.youtube.com/embed/pvLjbuLXcSg?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
                 </div>
-                <p class="video-title">Android Development Session 1</p>
-                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-title">Android Session 1</p>
                 <p class="video-description">
                     This is the first lecture on Android app development, covering the basics
                     of Android development workflow with Eclipse and simulating Android devices.
@@ -71,8 +70,7 @@
                 <div class="video embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZnfUNuUqclw?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
                 </div>
-                <p class="video-title">Android Development Session 2</p>
-                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-title">Android Session 2</p>
                 <p class="video-description">
                     This is the first lecture on Android app development, covering the basics
                     of Android development workflow with Eclipse and simulating Android devices.
@@ -82,8 +80,7 @@
                 <div class="video embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jOTO0TfHnu8?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
                 </div>
-                <p class="video-title">Android Development Session 3</p>
-                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-title">Android Session 3</p>
                 <p class="video-description">
                     This is the third Android development session, where students learn more
                     about developing with Java and working with the simulated Android devices.
@@ -93,8 +90,7 @@
                 <div class="video embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/dKe6i-W9TPo?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
                 </div>
-                <p class="video-title">Android Development Session 4</p>
-                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-title">Android Session 4</p>
                 <p class="video-description">
                     This fourth training session for Android covers more uses and implementations
                     of lists, and how to build applications with list structure.
@@ -104,8 +100,8 @@
                 <div class="video embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CFvVxBAySjk?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
                 </div>
-                <p class="video-title">Android Development Session 5</p>
-                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-title">Android Session 5</p>
+
                 <p class="video-description">
                     This is the first lecture on Android app development, covering the basics
                     of Android development workflow with Eclipse and simulating Android devices.
@@ -115,8 +111,8 @@
                 <div class="video embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nXgZMqe7QWs?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
                 </div>
-                <p class="video-title">Android Development Session 6</p>
-                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-title">Android Session 6</p>
+
                 <p class="video-description">
                     This session covers alert dialogues and toasts. Specifically, the lecture goes over
                     basic usage and then layout customizations of alerts that users respond to with given actions.
