--- a/education/windows.html
+++ b/education/windows.html
@@ -54,7 +54,28 @@
             </ul>
         </nav>
     </div>
-    <div style="margin:0 auto">
+    <div class="container video-container">
+        <div class="container-fluid video-container-inner">
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WaFe8f7Bxoo?list=PLaBZ8jJXpzRLjrH_tR1g8ict2FVgpvdeZ" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">Windows Session 1</p>
+                <p class="video-description">
+                    This is the first training session for development apps for Windows Phones.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8BFyVd1WzzU?list=PLaBZ8jJXpzRLjrH_tR1g8ict2FVgpvdeZ" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">Windows Session 2</p>
+                <p class="video-description">
+                    This is the second lecture on development windows phone applications
+                </p>
+            </div>
+        </div>
+        <div class="video-bottom"></div>
     </div>
 </div>
 
