--- a/education/design.html
+++ b/education/design.html
@@ -58,68 +58,71 @@
         <div class="container-fluid video-container-inner">
             <div class="col-sm-4">
                 <div class="video embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item youtube-video" src="https://www.youtube.com/embed/pvLjbuLXcSg?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yB58X1D8eNw?list=PLaBZ8jJXpzRJj31QvQLfryuSBCxosDy5Z" allowfullscreen></iframe>
                 </div>
-                <p class="video-title">Android Development Session 1</p>
-                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-title">Design Training Introduction</p>
                 <p class="video-description">
-                    This is the first lecture on Android app development, covering the basics
-                    of Android development workflow with Eclipse and simulating Android devices.
+                    This is the introduction to Design, the part where the overall look and user
+                    interface of the app is created.
                 </p>
             </div>
             <div class="col-sm-4">
                 <div class="video embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZnfUNuUqclw?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RtfVwCw8Kow?list=PLaBZ8jJXpzRJj31QvQLfryuSBCxosDy5Z" allowfullscreen></iframe>
                 </div>
-                <p class="video-title">Android Development Session 2</p>
-                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-title">Design Session 1</p>
                 <p class="video-description">
-                    This is the first lecture on Android app development, covering the basics
-                    of Android development workflow with Eclipse and simulating Android devices.
+                    This is the intro to graphic design workshop by Global App Initiative.
                 </p>
             </div>
             <div class="col-sm-4">
                 <div class="video embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jOTO0TfHnu8?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bJU1wSoNHAU?list=PLaBZ8jJXpzRJj31QvQLfryuSBCxosDy5Z" allowfullscreen></iframe>
                 </div>
-                <p class="video-title">Android Development Session 3</p>
-                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-title">Design Session 2 - Wireframing</p>
                 <p class="video-description">
-                    This is the third Android development session, where students learn more
-                    about developing with Java and working with the simulated Android devices.
+                    This is the second design workshop for building mobile applications. In this lecture,
+                    the wireframing tool Balsamiq is introduced.
                 </p>
             </div>
             <div class="col-sm-4">
                 <div class="video embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/dKe6i-W9TPo?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XHs_kRoLNbo?list=PLaBZ8jJXpzRJj31QvQLfryuSBCxosDy5Z" allowfullscreen></iframe>
                 </div>
-                <p class="video-title">Android Development Session 4</p>
-                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-title">Design Session 3 - Illustrator</p>
                 <p class="video-description">
-                    This fourth training session for Android covers more uses and implementations
-                    of lists, and how to build applications with list structure.
+                    Students develop more of the basic skills in using Illustrator as a vectorgraphics program,
+                    specifically learning the techniques of how to use the pen tool to recreate shapes and common logos.
                 </p>
             </div>
             <div class="col-sm-4">
                 <div class="video embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CFvVxBAySjk?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ElOMBgexvjU?list=PLaBZ8jJXpzRJj31QvQLfryuSBCxosDy5Z" allowfullscreen></iframe>
                 </div>
-                <p class="video-title">Android Development Session 5</p>
-                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-title">Design Session 4 - Illustrator</p>
                 <p class="video-description">
-                    This is the first lecture on Android app development, covering the basics
-                    of Android development workflow with Eclipse and simulating Android devices.
+                    This is the fourth design training session, developing the fundamentals of Illustrator techniques and
+                    uses of the pen tool, boolean operations, and other vector fundamentals.
                 </p>
             </div>
             <div class="col-sm-4">
                 <div class="video embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nXgZMqe7QWs?list=PLaBZ8jJXpzRJcYXlXq7CnFkWdA65lAlr1" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/clCx0PjL7Ms?list=PLaBZ8jJXpzRJj31QvQLfryuSBCxosDy5Z" allowfullscreen></iframe>
                 </div>
-                <p class="video-title">Android Development Session 6</p>
-                <p class="video-person">By Kevin Mannix</p>
+                <p class="video-title">Design Session 5 - Photoshop Intro</p>
                 <p class="video-description">
-                    This session covers alert dialogues and toasts. Specifically, the lecture goes over
-                    basic usage and then layout customizations of alerts that users respond to with given actions.
+                    This is the first design lecture on photoshop, aimed at teaching designers the necessary skills to use
+                    photoshop as part of the workflow for making a good user experience on mobile platforms.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5HBEg0k7-WU?list=PLaBZ8jJXpzRJj31QvQLfryuSBCxosDy5Z" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">Design Session 6 - Color & Type</p>
+                <p class="video-description">
+                    This lecture covers the basics of color theory and color balancing schemes, as well as introduces concepts of typography,
+                    covers the difference between Serif and San-serif typefaces, and covers how to use different typefaces correctly.
                 </p>
             </div>
         </div>
