--- a/education/ios.html
+++ b/education/ios.html
@@ -54,7 +54,58 @@
             </ul>
         </nav>
     </div>
-    <div style="margin:0 auto">
+    <div class="container video-container">
+        <div class="container-fluid video-container-inner">
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/qbfIiGBctXI?list=PLaBZ8jJXpzRJFbJrvkA2ku6cVm-7lJp6i" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">Xcode Development Introduction</p>
+                <p class="video-description">
+                    This is the introduction to developing iOS apps with Xcode.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/DaLmJhs1fow?list=PLaBZ8jJXpzRJFbJrvkA2ku6cVm-7lJp6i" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">iOS Session 1</p>
+                <p class="video-description">
+                    This is the first iOS training session after the introduction session, where students
+                    learn the fundamentals of object oriented programming and basic programming concepts.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe src="https://www.youtube.com/embed/MYxxgVJ52ZI?list=PLaBZ8jJXpzRJFbJrvkA2ku6cVm-7lJp6i" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">iOS Session 2</p>
+                <p class="video-description">
+                    This is the second iOS training session after the introduction session, where students learn more about working with view controllers.
+                </p>
+                <br>
+            </div>
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/GZwFt2pWrIc?list=PLaBZ8jJXpzRJFbJrvkA2ku6cVm-7lJp6i" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">iOS Session 3</p>
+                <p class="video-description">
+                    In the third session on iOS development, students learn more about development Objective-C and xcode.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <div class="video embed-responsive embed-responsive-16by9">
+                    <iframe src="https://www.youtube.com/embed/F3T-8hMSd8E?list=PLaBZ8jJXpzRJFbJrvkA2ku6cVm-7lJp6i" allowfullscreen></iframe>
+                </div>
+                <p class="video-title">iOS Session 4</p>
+                <p class="video-description">
+                    Students learn about how to use Parse inside iOS apps to create functionality like user login,
+                    database management and storage, and a variety of other extremely useful and important features.
+                </p>
+            </div>
+        </div>
+        <div class="video-bottom"></div>
     </div>
 </div>
 <!-- Site footer -->
@@ -72,7 +123,6 @@
             </div>
         </div>
     </div>
-    <div style="clear:both"></div>
     <div class="container-fluid">
         <ul class="footer-lists">
             <li>About</li>
