--- a/contact/index.html
+++ b/contact/index.html
@@ -21,12 +21,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="../../index.html"><img height="48px" src="../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
+            <a href="../index.html"><img height="48px" src="../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="../about/index.html">About</a></li>
-                <li><a href="../projects/index.html">Projects</a></li>
+                <li><a href="../projects/2015/index.html">Projects</a></li>
                 <li><a href="../education/android.html">Education</a></li>
                 <li><a href="../contact/index.html">Contact</a></li>
             </ul>
@@ -38,14 +38,16 @@
     <div class="container contact-body">
         <h1>Contact Us</h1>
         <div class="row form-row">
-            <form>
+            <form action="http://www.bluehost.com/bluemail" enctype="multipart/form-data" method="POST">
                 <div class="col-sm-6 col-sm-offset-3 form-group contact-form-group">
                     <label class="contact-label">Name</label>
-                    <input type="text" name="name" class="form-control contact-input">
+                    <input type="text" name="Name" class="form-control contact-input">
                     <label class="contact-label">Email</label>
-                    <input type="text" name="email" class="form-control contact-input">
+                    <input type="text" name="mailfrom" class="form-control contact-input">
                     <label class="contact-label">Message</label>
-                    <textarea class="form-control contact-input" name="message" rows="5"></textarea>
+                    <textarea class="form-control contact-input" name="text" rows="5"></textarea>
+                    <input type="hidden" name="sendtoemail" value="contact@globalappinitiative.org">
+                    <input type="hidden" name="redirect" value="http://globalappinitiative.org">
                     <button type="submit" value="Send" class="btn btn-default form-btn">Submit</button>
                 </div>
             </form>
