about page grid fix

--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,7 @@
         <h2>Our E-Board</h2>
     </div>
     <div class="container">
-        <div class="col-sm-4 col-xs-6">
+        <div class="col-sm-4 col-xs-12 eboard-member">
             <div class="ih-item circle colored effect3 left_to_right">
                 <a href="#">
                 <div class="img"><img src="../img/e-board/veena.jpg" alt="Veena Dali"></div>
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div class="row e-board">
-            <div class="col-sm-4 col-xs-6">
+            <div class="col-sm-4 col-xs-12 eboard-member">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
                     <div class="img"><img src="../img/e-board/kyle.jpg" alt="Kyle Mann"></div>
@@ -105,7 +105,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-6">
+            <div class="col-sm-4 col-xs-12 eboard-member">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
                     <div class="img"><img src="../img/e-board/An.png" alt="An Nguyen"></div>
@@ -116,7 +116,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-6">
+            <div class="col-sm-4 col-xs-12 eboard-member">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
                         <div class="img"><img src="../img/e-board/olivia.jpg" alt="Olivia Deng"></div>
@@ -127,7 +127,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-6">
+            <div class="col-sm-4 col-xs-12 eboard-member">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
                     <div class="img"><img src="../img/e-board/chris.jpg" alt="Chris Yip"></div>
@@ -138,7 +138,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-6">
+            <div class="col-sm-4 col-xs-12 eboard-member">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
                         <div class="img"><img src="../img/e-board/robin.jpeg" alt="Robin Liu"></div>
@@ -149,7 +149,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-6">
+            <div class="col-sm-4 col-xs-12">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
                         <div class="img"><img src="../img/e-board/chi.JPG" alt="Chi Zhang"></div>
@@ -160,7 +160,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-6">
+            <div class="col-sm-4 col-xs-12 eboard-member">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
                         <div class="img"><img src="../img/e-board/alexandra.png" alt="Alexandra Miller-Browne"></div>
@@ -171,7 +171,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-6">
+            <div class="col-sm-4 col-xs-12 eboard-member">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
                         <div class="img"><img src="../img/e-board/Leen.jpg" alt="Leen AlShenibr"></div>
