--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="about/index.html">About</a></li>
-                <li><a href="projects/index.html">Projects</a></li>
+                <li><a href="projects/2015/index.html">Projects</a></li>
                 <li><a href="education/index.html">Education</a></li>
                 <li><a href="contact/index.html">Contact</a></li>
             </ul>
@@ -168,7 +168,7 @@
         </div>
         <div class="col-sm-4 home-subscribe">
             <p>Keep up with the latest news and events</p>
-            <div class="col-sm-10 col-sm-offset-1 col-xs-offset-2">
+            <div class="col-sm-10 col-sm-offset-1 col-xs-offset-3">
                 <form class="subscribe-form">
                     <div class="form-group">
                         <div class="input-group">
@@ -226,7 +226,7 @@
             <li><a href="#">Windows</a></li>
         </ul>
         <ul class="footer-lists">
-            <li>Resources</li>
+            <li><a</li>
             <li><a href="/newsletter/">Newsletter</a></li>
         </ul>
         <ul class="footer-lists gray-social-ul">
@@ -250,7 +250,7 @@
     <hr>
     <div class="container-fluid footer-container" style="padding-bottom:20px">
         <div class="footer-corner">
-            <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
+            &copy Global App Initiative, Boston University
         </div>
         <div class="footer-corner">
             <a href="http://www.bu.edu/policies/students/disclaimer/" target="_blank"><i style="float:right">Website Disclaimer</i></a>
