--- a/education/windows.html
+++ b/education/windows.html
@@ -32,10 +32,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="../about/index.html">About</a></li>
-                <li><a href="../projects/index.html">Projects</a></li>
+                <li><a href="../projects/2015/index.html">Projects</a></li>
                 <li><a href="../education/android.html">Education</a></li>
-                <li><a href="../events/index.html">Events</a></li>
-                <li><a href="../contact/students/index.html">Contact</a></li>
+                <li><a href="../contact/index.html">Contact</a></li>
             </ul>
         </div>
     </div>
