--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             community service. Our partners' causes cover an array of social and economic
                             problems including education, health care, and homelessness.
                         </p>
-                        <a href="projects/index.html">See the nonprofits we've helped</a>
+                        <a href="projects/2015/index.html">See the nonprofits we've helped</a>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                             Global App Initiative's diverse community.Students' majors range from neuroscience
                             to graphic design, and much more!
                         </p>
-                        <a href="projects/index.html">Just take a look at our team</a>
+                        <a href="about/index.html">Just take a look at our team</a>
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                             have the opporunity to constantly pick up new skills by attending office hours,
                             workshops, and team meetings.
                         </p>
-                        <a href="projects/index.html">View tutorials and educational resources</a>
+                        <a href="education/android.html">View tutorials and educational resources</a>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                             Business Development, Education, and Client Relations committees enable
                             motivated students to guide their peers to succeed.
                         </p>
-                        <a href="projects/index.html">See where you can fit in</a>
+                        <a href="contact/index.html">See where you can fit in</a>
                     </div>
                 </div>
             </div>
